Fixed text aligns

--- a/src/App.css
+++ b/src/App.css
@@ -78,12 +78,12 @@ a{
   background-color: #e3e8f1;
 }
 
-.css-4j4xdv-MuiDrawer-docked .MuiDrawer-paper >div > h2 {
+.css-9e3g64-MuiDrawer-docked .MuiDrawer-paper >div > h2 {
   text-align: left !important;
   margin-left: 10px;
 }
 
-.css-4j4xdv-MuiDrawer-docked .MuiDrawer-paper > h2{
+.css-aqqmce-MuiDrawer-docked .MuiDrawer-paper > h2{
   text-align: left !important;
   margin-left: 10px;
 }
